@@ -615,7 +615,6 @@
   <string><id>1030</id><value>an image</value></string>
   <string><id>1031</id><value>an image folder</value></string>
   <string><id>1032</id><value>Add Network Location...</value></string>
-  <string><id>1033</id><value>Enter the new value</value></string>
 
   <string><id>1200</id><value>SMB Client</value></string>
   <string><id>1202</id><value>Workgroup</value></string>
